# SoundSynth

./: CMakeLists.txt  README.md  run_cmake.sh
src/: main.cpp
src/Synthesizer/: Synthesizer.cpp  Synthesizer.h
src/Synthesizer/Oscillator/: Oscillator.cpp  Oscillator.h
